tests/ui/suggestions/issue-84973-2.stderr
error[E0277]: the trait bound `i32: Tr` is not satisfied
  --> $DIR/issue-84973-2.rs:11:9
   |
LL |     foo(a);
   |     --- ^
   |     |   |
   |     |   the trait `Tr` is not implemented for `i32`
   |     |   help: consider mutably borrowing here: `&mut`
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/issue-84973-2.rs:7:11
   |
LL | fn foo<T: Tr>(i: T) {}
   |           ^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
